# sample_cpp_project

./: Makefile.am  README.md  SConstruct  autogen.sh  configure.ac
src/: hello.cpp  hello.h  main.cpp
