## Helloworld c++: an example project

AC_INIT([Helloworld C++], [0.5], [ishikawatt@gmail.com],[sample_c++_project], [https://github.com/vanipuyo/sample_cpp_project])
AC_PREREQ([2.64])
AM_INIT_AUTOMAKE([1.11 -Wall no-define subdirs-objects])
AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
